<resources>
    <string name="app_name">Склад</string>
    <string name="info_btn">Информация</string>
    <string name="good_btn">Товары</string>
    <string name="suppliers_btn">Поставщики</string>
    <string name="sklad_name">Название склада:</string>
    <string name="sklad_data">Информация о складе:</string>
    <string name="supplier_name">Название поставщика:</string>
    <string name="supplier_names">Название поставщика:</string>
    <string name="supplier_data">Информация о поставщикe:</string>
    <string name="Save">Сохранить</string>
    <string name="add_good">Добавить товар</string>
    <string name="add_sklad">Добавить Склад</string>
    <string name="add_supplier">Добавить Поставщика</string>
    <string name="good_name">Название товара</string>
    <string name="about_good">Описание</string>
    <string name="good_parametr">Параметры</string>
    <string name="good_count">Количество</string>
    <string name="add_category">Добавить категорию</string>
    <string name="category_settings">Управление категориями</string>
    <string name="supplier_settings">Управление поставщиками</string>
    <string name="sklad_settings">Управление складами</string>
    <string name="select_sklad">Выберите склад: </string>
    <string name="category_name">Имя категории: </string>
    <string name="filtr">Фильтр</string>
</resources>
